SSYS-5 <Implement Navbar>

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
-    <title></title>
+    <title>SSYS</title>
     <meta charset="UTF-8">
+
+    <meta name="description" content="Gestiona el inventario de tu negocio con una herramienta | SSYS">
+    <meta name="keywords" content="SSYS, Sistema, Inventario, Negocio, Gestión">
+    <meta name="author" content="SSYS">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="./src/style.css" rel="stylesheet">
   </head>
   <body>
-  
+    <header>
+      <div class="logo">
+        <img src="./src/img/ssys-logo.png" alt="SSYS">
+        <h1>SSYS</h1>
+      </div>
+      <div class="navbar">
+        <ul class="menu">
+          <li class="menu-item"><a href="">Nosotros</a></li>
+          <li class="menu-item"><a href="">Beneficios</a></li>
+          <li class="menu-item"><a href="">Comunidad</a></li>
+          <li class="menu-item"><a href="">Soporte</a></li>
+          <li class="menu-item"><a href="">Acerca de</a></li>
+        </ul>
+      </div>
+      <div class="btn-sesion">
+        <button id="login">Log in</button>
+        <button id="register">Register</button>
+      </div>
+    </header>
   </body>
 </html>
