SSYS-4 <Implement Hero banner section>

--- a/index.html
+++ b/index.html
@@ -30,5 +30,12 @@
         <button id="register">Register</button>
       </div>
     </header>
+    <div class="hero-section">
+      <div class="hero-text">
+        <h1>La mejor herramienta para tu Negocio</h1>
+        <p>SSYS es una herramienta que te permite gestionar el inventario de tu negocio de una manera fácil y sencilla.</p>
+        <button id="btn-hero">Comienza Ya</button>
+      </div>
+    </div>
   </body>
 </html>
