SSYS-7 <implement about section>

--- a/index.html
+++ b/index.html
@@ -1,41 +1,88 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <title>SSYS</title>
-    <meta charset="UTF-8">
 
-    <meta name="description" content="Gestiona el inventario de tu negocio con una herramienta | SSYS">
-    <meta name="keywords" content="SSYS, Sistema, Inventario, Negocio, Gestión">
-    <meta name="author" content="SSYS">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="./src/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <div class="logo">
-        <img src="./src/img/ssys-logo.png" alt="SSYS">
-        <h1>SSYS</h1>
+<head>
+  <title>SSYS</title>
+  <meta charset="UTF-8">
+
+  <meta name="description" content="Gestiona el inventario de tu negocio con una herramienta | SSYS">
+  <meta name="keywords" content="SSYS, Sistema, Inventario, Negocio, Gestión">
+  <meta name="author" content="SSYS">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="./src/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <!-- Navbar section -->
+  <header>
+    <div class="logo">
+      <img src="./src/img/ssys-logo.png" alt="SSYS">
+      <h1>SSYS</h1>
+    </div>
+    <div class="navbar">
+      <ul class="menu">
+        <li class="menu-item"><a href="">Nosotros</a></li>
+        <li class="menu-item"><a href="#about">Beneficios</a></li>
+        <li class="menu-item"><a href="">Comunidad</a></li>
+        <li class="menu-item"><a href="">Soporte</a></li>
+        <li class="menu-item"><a href="">Acerca de</a></li>
+      </ul>
+    </div>
+    <div class="btn-sesion">
+      <button id="login">Log in</button>
+      <button id="register">Register</button>
+    </div>
+  </header>
+  <!-- Hero Section -->
+  <div class="hero-section">
+    <div class="hero-text">
+      <h1>La mejor herramienta para tu Negocio</h1>
+      <p>SSYS es una plataforma que te permite gestionar el
+        inventario de tu negocio de una manera fácil y sencilla.</p>
+      <button id="btn-hero">Comienza Ya</button>
+    </div>
+  </div>
+  <!-- About Section -->
+  <div class="about-section" id="about">
+    <div class="about-text">
+      <h1>Explore diversas herramientas beneficiosas para su empresa</h1>
+    </div>
+    <div class="about-content">
+      <div class="about-items">
+        <h3>Adminsitre su inventario</h3>
+        <p>SSYS es la herramienta perfecta para registrar, organizar
+          y verificar el estado del inventario de su empresa. Aplicable para
+          todo tipo de negocio o emprendimiento.
+        </p>
+        <button>Aprender mas</button>
       </div>
-      <div class="navbar">
-        <ul class="menu">
-          <li class="menu-item"><a href="">Nosotros</a></li>
-          <li class="menu-item"><a href="">Beneficios</a></li>
-          <li class="menu-item"><a href="">Comunidad</a></li>
-          <li class="menu-item"><a href="">Soporte</a></li>
-          <li class="menu-item"><a href="">Acerca de</a></li>
-        </ul>
+      <div class="about-items">
+        <h3>Consulte las compras ventas realizadas</h3>
+        <p>SSYS cuenta con un sistema de compras y ventas el cual le 
+          sera de gran utilidad al presentarse algun inconveniente con el destino
+          o procedencia de algun producto.
+        </p>
+        <button>Aprender mas</button>
       </div>
-      <div class="btn-sesion">
-        <button id="login">Log in</button>
-        <button id="register">Register</button>
+      <div class="about-items">
+        <h3>Facil de entender</h3>
+        <p>Un gran atributo de un software especifico para micro y empresas emergentes
+          es la facilidad para entender y utilizar adecuadamente todas las funciones 
+          de este. Nuestro servicio posee una interfaz concisa, a demas de brindar 
+          multiples tutoriales de ayuda y soporte.
+        </p>
+        <button>Aprender mas</button>
       </div>
-    </header>
-    <div class="hero-section">
-      <div class="hero-text">
-        <h1>La mejor herramienta para tu Negocio</h1>
-        <p>SSYS es una herramienta que te permite gestionar el inventario de tu negocio de una manera fácil y sencilla.</p>
-        <button id="btn-hero">Comienza Ya</button>
+      <div class="about-items">
+        <h3>Registro de clientes y proveedores</h3>
+        <p>Para brindar un sistema completo de administracion de inventario, Nuestro
+          servicio tambien ofrece un registro para clientes y proveedores, el cual es
+          de mucha utilidad al realizar una compra o venta.
+        </p>
+        <button>Aprender mas</button>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
