SSYS-8 <implement community section>

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <ul class="menu">
         <li class="menu-item"><a href="">Nosotros</a></li>
         <li class="menu-item"><a href="#about">Beneficios</a></li>
-        <li class="menu-item"><a href="">Comunidad</a></li>
+        <li class="menu-item"><a href="#community">Comunidad</a></li>
         <li class="menu-item"><a href="">Soporte</a></li>
         <li class="menu-item"><a href="">Acerca de</a></li>
       </ul>
@@ -58,7 +58,7 @@
       </div>
       <div class="about-items">
         <h3>Consulte las compras ventas realizadas</h3>
-        <p>SSYS cuenta con un sistema de compras y ventas el cual le 
+        <p>SSYS cuenta con un sistema de compras y ventas el cual le
           sera de gran utilidad al presentarse algun inconveniente con el destino
           o procedencia de algun producto.
         </p>
@@ -67,8 +67,8 @@
       <div class="about-items">
         <h3>Facil de entender</h3>
         <p>Un gran atributo de un software especifico para micro y empresas emergentes
-          es la facilidad para entender y utilizar adecuadamente todas las funciones 
-          de este. Nuestro servicio posee una interfaz concisa, a demas de brindar 
+          es la facilidad para entender y utilizar adecuadamente todas las funciones
+          de este. Nuestro servicio posee una interfaz concisa, a demas de brindar
           multiples tutoriales de ayuda y soporte.
         </p>
         <button>Aprender mas</button>
@@ -83,6 +83,31 @@
       </div>
     </div>
   </div>
+  <!-- Comunity Section -->
+  <div class="community-section" id="community">
+    <h1>¿Para quien esta dirigido nuestro producto?</h1>
+    <h3>
+      SSYS es un software pensado especificamente para las microempresas y los
+      negocios independientes que buscan una herramienta que sea ideal para
+      su negocio.
+    </h3>
+    <div class="community-cards">
+      <div class="community-item"><img src="https://cdn.pixabay.com/photo/2016/11/29/07/10/hand-1868015_960_720.jpg" alt="person segment one">
+        <h4>Mypes que no cuentan con software</h4>
+        <p>Si es la primera vez que desea contratar un servicio de software
+          que le sea de utilidad pra su empresa, SSYS es la solucion perfecta.</p>
+        <button class="btn-community">Aprender mas</button>
+      </div>
+      <div class="community-item"><img src="https://cdn.pixabay.com/photo/2016/02/07/21/03/computer-1185626_960_720.jpg" alt="">
+        <h4>Mypes que utilizan software</h4>
+        <p>Si su software no posee alguna funcion qu busca o siente que
+          es momento de actualizarlo para impulsar su negocio, SSYS le brinda
+          esas herramientas indispensables para su empresa.</p>
+        <button class="btn-community">Aprender mas</button>
+      </div>
+    </div>
+  </div>
+  <!-- Footer Section -->
 </body>
 
 </html>
