SSYS-11 <implement footer section>

--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
     </div>
   </div>
   <!-- Footer Section -->
+  <footer>
+    <div class="logo-footer">
+      <img src="./src/img/SSYS.png" alt="">
+      <h5>SSYS</h1>
+    </div>
+    <h5>Samsan Tech 2022</h5>
+  </footer>
 </body>
 
 </html>
