SSYS-11 <fixed footer>

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     </div>
     <div class="navbar">
       <ul class="menu">
-        <li class="menu-item"><a href="">Nosotros</a></li>
+        <li class="menu-item"><a href="#hero">Nosotros</a></li>
         <li class="menu-item"><a href="#about">Beneficios</a></li>
         <li class="menu-item"><a href="#community">Comunidad</a></li>
-        <li class="menu-item"><a href="">Soporte</a></li>
-        <li class="menu-item"><a href="">Acerca de</a></li>
+        <li class="menu-item"><a href="#soporte">Soporte</a></li>
+        <li class="menu-item"><a href="#soporte">Acerca de</a></li>
       </ul>
     </div>
     <div class="btn-sesion">
@@ -34,7 +34,7 @@
     </div>
   </header>
   <!-- Hero Section -->
-  <div class="hero-section">
+  <div class="hero-section" id="hero">
     <div class="hero-text">
       <h1>La mejor herramienta para tu Negocio</h1>
       <p>SSYS es una plataforma que te permite gestionar el
@@ -108,7 +108,7 @@
     </div>
   </div>
   <!-- Footer Section -->
-  <footer>
+  <footer id="soporte">
     <div class="logo-footer">
       <img src="./src/img/SSYS.png" alt="">
       <h5>SSYS</h1>
