feat!: call to action

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </ul>
     </div>
     <div class="btn-sesion">
-      <button id="login">Log in</button>
-      <button id="register">Register</button>
+      <button id="login"><a href="https://ssys-2.web.app/">Log in</a></button>
+      <button id="register"><a href="https://ssys-2.web.app/">Register</a></button>
     </div>
   </header>
   <!-- Hero Section -->
