ft!:Connect to web application

--- a/index.html
+++ b/index.html
@@ -9,27 +9,28 @@
   <meta name="author" content="SSYS">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="assets/style.css" rel="stylesheet">
+  <link href="assets/main.js" rel="script">
 </head>
 
 <body>
   <!-- Navbar section -->
   <header>
-    <div class="logo">
+    <div class="menu-branding">
       <img src="assets/img/ssys-logo.png" alt="logo">
       <h1>SSYS</h1>
     </div>
-    <div class="navbar">
-      <ul class="menu">
-        <li class="menu-item"><a href="#hero">About the team</a></li>
-        <li class="menu-item"><a href="#about">Benefits</a></li>
-        <li class="menu-item"><a href="#community">Community</a></li>
-        <li class="menu-item"><a href="#support">Support</a></li>
-        <li class="menu-item"><a href="#support">About</a></li>
+    <div class="div-navbar">
+      <ul class="navbar">
+        <li class="nav-item"><a href="#hero">About the team</a></li>
+        <li class="nav-item"><a href="#about">Benefits</a></li>
+        <li class="nav-item"><a href="#community">Community</a></li>
+        <li class="nav-item"><a href="#support">Support</a></li>
+        <li class="nav-item"><a href="#support">About</a></li>
       </ul>
     </div>
-    <div class="btn-sesion">
-      <button id="login"><a href="https://ssys-2.web.app/">Log in</a></button>
-      <button id="register"><a href="https://ssys-2.web.app/">Register</a></button>
+    <div class="btn-session">
+      <button class="btn-menu" id="login"><a href="https://ssys-2.web.app/signIn">Sing In</a></button>
+      <button class="btn-menu" id="register"><a href="https://ssys-2.web.app/signUp">Join Now</a></button>
     </div>
   </header>
   <!-- Hero Section -->
@@ -67,8 +68,7 @@
         <h3>Easy to understand</h3>
         <p>A great attribute of a software specifically for micro and start-up companies
           is the ease of understanding and properly utilizing all of its functions.
-          functions. Our service has a concise interface, in addition to providing multiple help
-          multiple help and support tutorials.
+          functions. Our service has a concise interface, in addition to providing multiple help           and support tutorials.
         </p>
         <button>Learn more</button>
       </div>
@@ -78,11 +78,11 @@
           service also offers a register for customers and suppliers, which is very useful when making a purchase or sale.
           very useful when making a purchase or sale.
         </p>
-        <button>Aprender mas</button>
+        <button>Learn more</button>
       </div>
     </div>
   </div>
-  <!-- Comunity Section -->
+  <!-- Community Section -->
   <div class="community-section" id="community">
     <h1>For whom is our product intended?</h1>
     <h3>
@@ -99,9 +99,8 @@
       </div>
       <div class="community-item"><img src="assets/img/person2.webp" alt="enterprising person">
         <h4>Mypes that use software</h4>
-        <p>If your software does not have a feature you are looking for or you feel it is time to upgrade it
-          it's time to upgrade it to boost your business, SSYS provides you with those indispensable
-          those indispensable tools for your company.</p>
+        <p>If your software does not have a feature you are looking for, or you feel it is time to upgrade if
+          it's time to upgrade it to boost your business, SSYS provides you with those indispensable           tools for your company.</p>
         <button class="btn-community">Learn More</button>
       </div>
     </div>
