fix: changing links.

--- a/index.html
+++ b/index.html
@@ -1,120 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>SSYS</title>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Manage your business inventory with one tool | SSYS"
+    />
+    <meta
+      name="keywords"
+      content="SSYS, System, Inventory, Business, Management"
+    />
+    <meta name="author" content="SSYS" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="assets/style.css" rel="stylesheet" />
+    <link href="assets/main.js" rel="script" />
+  </head>
 
-<head>
-  <title>SSYS</title>
-  <meta charset="UTF-8">
-  <meta name="description" content="Manage your business inventory with one tool | SSYS">
-  <meta name="keywords" content="SSYS, System, Inventory, Business, Management">
-  <meta name="author" content="SSYS">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="assets/style.css" rel="stylesheet">
-  <link href="assets/main.js" rel="script">
-</head>
-
-<body>
-  <!-- Navbar section -->
-  <header>
-    <div class="menu-branding">
-      <img src="assets/img/ssys-logo.png" alt="logo">
-      <h1>SSYS</h1>
-    </div>
-    <div class="div-navbar">
-      <ul class="navbar">
-        <li class="nav-item"><a href="#hero">About the team</a></li>
-        <li class="nav-item"><a href="#about">Benefits</a></li>
-        <li class="nav-item"><a href="#community">Community</a></li>
-        <li class="nav-item"><a href="#support">Support</a></li>
-        <li class="nav-item"><a href="#support">About</a></li>
-      </ul>
-    </div>
-    <div class="btn-session">
-      <button class="btn-menu" id="login"><a href="https://ssys-2.web.app/signIn">Sing In</a></button>
-      <button class="btn-menu" id="register"><a href="https://ssys-2.web.app/signUp">Join Now</a></button>
-    </div>
-  </header>
-  <!-- Hero Section -->
-  <div class="hero-section" id="hero">
-    <div class="hero-text">
-      <h1>The best tool for your business</h1>
-      <p>SSYS is a platform that allows you to easily manage
-        your business inventory in an easy and simple way.</p>
-      <button id="btn-hero">Start Now</button>
-    </div>
-  </div>
-  <!-- About Section -->
-  <div class="about-section" id="about">
-    <div class="about-text">
-      <h1>Explore several beneficial tools for your company</h1>
-    </div>
-    <div class="about-content">
-      <div class="about-items">
-        <h3>Manage your inventory</h3>
-        <p>SSYS is the perfect tool for recording, organizing and verifying the status of your
-          and verify the status of your company's inventory. Applicable for
-          any type of business or enterprise.
+  <body>
+    <!-- Navbar section -->
+    <header>
+      <div class="menu-branding">
+        <img src="assets/img/ssys-logo.png" alt="logo" />
+        <h1>SSYS</h1>
+      </div>
+      <div class="div-navbar">
+        <ul class="navbar">
+          <li class="nav-item"><a href="#hero">About the team</a></li>
+          <li class="nav-item"><a href="#about">Benefits</a></li>
+          <li class="nav-item"><a href="#community">Community</a></li>
+          <li class="nav-item"><a href="#support">Support</a></li>
+          <li class="nav-item"><a href="#support">About</a></li>
+        </ul>
+      </div>
+      <div class="btn-session">
+        <button class="btn-menu" id="login">
+          <a href="https://ssys-v3.web.app/signIn">Sing In</a>
+        </button>
+        <button class="btn-menu" id="register">
+          <a href="https://ssys-v3.web.app/signUp">Join Now</a>
+        </button>
+      </div>
+    </header>
+    <!-- Hero Section -->
+    <div class="hero-section" id="hero">
+      <div class="hero-text">
+        <h1>The best tool for your business</h1>
+        <p>
+          SSYS is a platform that allows you to easily manage your business
+          inventory in an easy and simple way.
         </p>
-        <button>Learn more</button>
-      </div>
-      <div class="about-items">
-        <h3>Consult the purchases and sales made</h3>
-        <p>SSYS has a purchase and sales system which will be very useful in case of any inconvenience
-          be very useful in case of any inconvenience with the destination or origin of any product.
-          destination or origin of any product.
-        </p>
-        <button>Learn more</button>
-      </div>
-      <div class="about-items">
-        <h3>Easy to understand</h3>
-        <p>A great attribute of a software specifically for micro and start-up companies
-          is the ease of understanding and properly utilizing all of its functions.
-          functions. Our service has a concise interface, in addition to providing multiple help           and support tutorials.
-        </p>
-        <button>Learn more</button>
-      </div>
-      <div class="about-items">
-        <h3>Customer and supplier registration</h3>
-        <p>To provide a complete inventory management system, our service also offers a customer and vendor
-          service also offers a register for customers and suppliers, which is very useful when making a purchase or sale.
-          very useful when making a purchase or sale.
-        </p>
-        <button>Learn more</button>
+        <button id="btn-hero">Start Now</button>
       </div>
     </div>
-  </div>
-  <!-- Community Section -->
-  <div class="community-section" id="community">
-    <h1>For whom is our product intended?</h1>
-    <h3>
-      SSYS is a software specifically designed for micro-enterprises and independent businesses that are
-      independent businesses looking for a tool that is ideal for their business.
-      their business.
-    </h3>
-    <div class="community-cards">
-      <div class="community-item"><img src="assets/img/person1.webp" alt="enterprising person">
-        <h4>Mypes that do not have software</h4>
-        <p>If this is the first time you want to hire a software service that will be useful for your company
-          that will be useful for your company, SSYS is the perfect solution.</p>
-        <button class="btn-community">Learn More</button>
+    <!-- About Section -->
+    <div class="about-section" id="about">
+      <div class="about-text">
+        <h1>Explore several beneficial tools for your company</h1>
       </div>
-      <div class="community-item"><img src="assets/img/person2.webp" alt="enterprising person">
-        <h4>Mypes that use software</h4>
-        <p>If your software does not have a feature you are looking for, or you feel it is time to upgrade if
-          it's time to upgrade it to boost your business, SSYS provides you with those indispensable           tools for your company.</p>
-        <button class="btn-community">Learn More</button>
+      <div class="about-content">
+        <div class="about-items">
+          <h3>Manage your inventory</h3>
+          <p>
+            SSYS is the perfect tool for recording, organizing and verifying the
+            status of your and verify the status of your company's inventory.
+            Applicable for any type of business or enterprise.
+          </p>
+          <button>Learn more</button>
+        </div>
+        <div class="about-items">
+          <h3>Consult the purchases and sales made</h3>
+          <p>
+            SSYS has a purchase and sales system which will be very useful in
+            case of any inconvenience be very useful in case of any
+            inconvenience with the destination or origin of any product.
+            destination or origin of any product.
+          </p>
+          <button>Learn more</button>
+        </div>
+        <div class="about-items">
+          <h3>Easy to understand</h3>
+          <p>
+            A great attribute of a software specifically for micro and start-up
+            companies is the ease of understanding and properly utilizing all of
+            its functions. functions. Our service has a concise interface, in
+            addition to providing multiple help and support tutorials.
+          </p>
+          <button>Learn more</button>
+        </div>
+        <div class="about-items">
+          <h3>Customer and supplier registration</h3>
+          <p>
+            To provide a complete inventory management system, our service also
+            offers a customer and vendor service also offers a register for
+            customers and suppliers, which is very useful when making a purchase
+            or sale. very useful when making a purchase or sale.
+          </p>
+          <button>Learn more</button>
+        </div>
       </div>
     </div>
-  </div>
-
-  <!-- Footer Section -->
-
-  <footer id="support">
-    <div class="logo-footer">
-      <img src="assets/img/ssys.png" alt="logo">
-      <h1>SSYS</h1>
+    <!-- Community Section -->
+    <div class="community-section" id="community">
+      <h1>For whom is our product intended?</h1>
+      <h3>
+        SSYS is a software specifically designed for micro-enterprises and
+        independent businesses that are independent businesses looking for a
+        tool that is ideal for their business. their business.
+      </h3>
+      <div class="community-cards">
+        <div class="community-item">
+          <img src="assets/img/person1.webp" alt="enterprising person" />
+          <h4>Mypes that do not have software</h4>
+          <p>
+            If this is the first time you want to hire a software service that
+            will be useful for your company that will be useful for your
+            company, SSYS is the perfect solution.
+          </p>
+          <button class="btn-community">Learn More</button>
+        </div>
+        <div class="community-item">
+          <img src="assets/img/person2.webp" alt="enterprising person" />
+          <h4>Mypes that use software</h4>
+          <p>
+            If your software does not have a feature you are looking for, or you
+            feel it is time to upgrade if it's time to upgrade it to boost your
+            business, SSYS provides you with those indispensable tools for your
+            company.
+          </p>
+          <button class="btn-community">Learn More</button>
+        </div>
+      </div>
     </div>
-    <h5>Samsan Tech 2022</h5>
-  </footer>
-</body>
+    <iframe width="640" height="360" src="https://web.microsoftstream.com/embed/video/55b74de1-eb5b-4bd9-8410-32c46850239e?autoplay=false&showinfo=true" allowfullscreen style="border:none;"></iframe>
 
+    <!-- Footer Section -->
+
+    <footer id="support">
+      <div class="logo-footer">
+        <img src="assets/img/ssys.png" alt="logo" />
+        <h1>SSYS</h1>
+      </div>
+      <h5>Samsan Tech 2022</h5>
+    </footer>
+  </body>
 </html>
