feat: adding about the team & product video.

--- a/index.html
+++ b/index.html
@@ -132,14 +132,31 @@
         </div>
       </div>
     </div>
-    <iframe width="640" height="360" src="https://web.microsoftstream.com/embed/video/55b74de1-eb5b-4bd9-8410-32c46850239e?autoplay=false&showinfo=true" allowfullscreen style="border:none;"></iframe>
 
+    <h1>ABOUT THE TEAM</h1>
+    <iframe
+      width="640"
+      height="360"
+      src="https://web.microsoftstream.com/embed/video/55b74de1-eb5b-4bd9-8410-32c46850239e?autoplay=false&showinfo=true"
+      allowfullscreen
+      style="border: none"
+    ></iframe>
+
+    <h1>ABOUT THE PRODUCT</h1>
+    <iframe
+      width="640"
+      height="360"
+      src="https://web.microsoftstream.com/embed/video/0f8fad27-a866-4944-8fbf-2f90f7001fe4?autoplay=false&showinfo=true"
+      allowfullscreen
+      style="border: none"
+    ></iframe>
     <!-- Footer Section -->
 
     <footer id="support">
       <div class="logo-footer">
         <img src="assets/img/ssys.png" alt="logo" />
         <h1>SSYS</h1>
+        <a href="#">Terminos y condiciones</a>
       </div>
       <h5>Samsan Tech 2022</h5>
     </footer>
